feat: refactor for auth service
