# src/main/java/com/proyectum/users/domain/model/UserAggregate.java
@@ -2,13 +2,14 @@ package com.proyectum.users.domain.model;
 
 import com.proyectum.users.ddd.aggregate.AggregateID;
 import com.proyectum.users.ddd.aggregate.AggregateRoot;
-import com.proyectum.users.domain.event.UserCreatedEvent;
+import com.proyectum.users.domain.event.UserRegisteredEvent;
 import lombok.*;
 
 import java.time.LocalDateTime;
 
 @Data
 @EqualsAndHashCode(callSuper = true)
+@ToString(callSuper = true)
 public class UserAggregate extends AggregateRoot {
 
     private Username username;
@@ -16,14 +17,12 @@ public class UserAggregate extends AggregateRoot {
     private Email email;
     private CreatedAt createdAt;
     private UpdatedAt updatedAt;
-    private FirstName firstName;
-    private LastName lastName;
 
     private UserAggregate() {
         super();
     }
 
-    private UserAggregate(AggregateID aggregateID, Username username, FirstName firstName, LastName lastName, Password password,
+    private UserAggregate(AggregateID aggregateID, Username username, Password password,
                           Email email, CreatedAt createdAt, UpdatedAt updatedAt) {
         super(aggregateID);
         this.username = username;
@@ -31,23 +30,19 @@ public class UserAggregate extends AggregateRoot {
         this.email = email;
         this.createdAt = createdAt;
         this.updatedAt = updatedAt;
-        this.firstName = firstName;
-        this.lastName = lastName;
     }
 
-    public static UserAggregate create(AggregateID id, Username username, FirstName firstName, LastName lastName, Password password, Email email) {
+    public static UserAggregate create(AggregateID id, Username username, Password password, Email email) {
         var user = new UserAggregate(
                 id,
                 username,
-                firstName,
-                lastName,
                 password,
                 email,
                 new CreatedAt(LocalDateTime.now()),
                 new UpdatedAt(LocalDateTime.now())
         );
 
-        var event = new UserCreatedEvent(user.getId(), user.getUsername(), user.getEmail());
+        var event = new UserRegisteredEvent(user.getId(), user.getUsername(), user.getEmail());
         user.addEvent(event);
         return user;
     }
